--- a/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
+++ b/PythonProjects/OmronOfficeSystem/communication/CommunicationUi.ui
@@ -58,7 +58,7 @@
               <string>Client</string>
              </property>
              <property name="checked">
-              <bool>false</bool>
+              <bool>true</bool>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">CSGroup</string>
@@ -77,7 +77,7 @@
               <string>Server</string>
              </property>
              <property name="checked">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <attribute name="buttonGroup">
               <string notr="true">CSGroup</string>
@@ -405,6 +405,9 @@
              <property name="text">
               <string>连接</string>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
           </layout>
@@ -435,6 +438,12 @@
          </item>
          <item row="1" column="0" rowspan="3" colspan="2">
           <widget class="QTreeWidget" name="CSTree">
+           <property name="selectionMode">
+            <enum>QAbstractItemView::SingleSelection</enum>
+           </property>
+           <property name="selectionBehavior">
+            <enum>QAbstractItemView::SelectItems</enum>
+           </property>
            <property name="columnCount">
             <number>3</number>
            </property>
